--- a/CustomRPC/Strings.nl.resx
+++ b/CustomRPC/Strings.nl.resx
@@ -118,47 +118,47 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="error" xml:space="preserve">
-    <value>Klaida</value>
+    <value>Fout</value>
   </data>
   <data name="errorNoID" xml:space="preserve">
-    <value>Nenurodytas ID!</value>
+    <value>Geen ID opgegeven!</value>
   </data>
   <data name="errorUpdateFailed" xml:space="preserve">
-    <value>Atsisiunčiant ar diegiant atnaujinimą įvyko klaida.
-Paspauskite „Taip“, jei norite bandyti dar kartą, arba „Ne“, jei norite atsisiųsti rankiniu būdu.</value>
+    <value>Er is een fout opgetreden bij het downloaden of installeren van een update.
+Druk op "Ja" om het opnieuw te proberen of op "Nee" om handmatig te downloaden.</value>
   </data>
   <data name="firstTimeRun" xml:space="preserve">
-    <value>Paleidimas pirma kartą</value>
+    <value>Eerste keer geopend</value>
   </data>
   <data name="firstTimeRunText" xml:space="preserve">
-    <value>Ar norėtumėte atidaryti instrukcijas?
-Galite jį atidaryti bet kuriuo metu, eidami į Pagalba -&gt; Atidaryti instrukcijas arba paspausdami F1.</value>
+    <value>Wilt u een handleiding openen?
+Je kunt het op elk moment openen door naar Help -&gt; Open de handleiding te gaan of op F1 te drukken.</value>
   </data>
   <data name="information" xml:space="preserve">
-    <value>Informacija</value>
+    <value>Informatie</value>
   </data>
   <data name="statusConnected" xml:space="preserve">
-    <value>Prisijungta</value>
+    <value>Verbonden</value>
   </data>
   <data name="statusConnecting" xml:space="preserve">
-    <value>Jungiamasi...</value>
+    <value>Verbinden...</value>
   </data>
   <data name="statusConnectionFailed" xml:space="preserve">
-    <value>Prisijungimas ne sėkmingas (ar Discord veikia?)</value>
+    <value>Verbinding mislukt (Is Discord actief?)</value>
   </data>
   <data name="statusDisconnected" xml:space="preserve">
-    <value>Atsijungta</value>
+    <value>Verbinding verbroken</value>
   </data>
   <data name="statusError" xml:space="preserve">
-    <value>Prisijungimo Klaida (Blogas ID?)</value>
+    <value>Verbindingsfout (verkeerde ID?)</value>
   </data>
   <data name="errorInvalidURL" xml:space="preserve">
-    <value>Neteisingas URL nurodytas mygtukams arba tekstas per ilgas!</value>
+    <value>Ongeldige URL opgegeven voor knop(pen) of de tekst is te lang!</value>
   </data>
   <data name="errorNoInternet" xml:space="preserve">
-    <value>Neįmanoma prisijungti prie interneto!</value>
+    <value>Kan geen verbinding maken met het internet!</value>
   </data>
   <data name="noUpdatesFound" xml:space="preserve">
-    <value>Naujinimų nerasta!</value>
+    <value>Geen updates gevonden!</value>
   </data>
 </root>
