--- a/CustomRPC/UpdatePrompt.nl.resx
+++ b/CustomRPC/UpdatePrompt.nl.resx
@@ -117,48 +117,36 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="error" xml:space="preserve">
-    <value>Klaida</value>
+  <data name="buttonUpdate.Text" xml:space="preserve">
+    <value>Ja</value>
   </data>
-  <data name="errorNoID" xml:space="preserve">
-    <value>Nenurodytas ID!</value>
+  <data name="buttonNotNow.Text" xml:space="preserve">
+    <value>Niet Nu</value>
   </data>
-  <data name="errorUpdateFailed" xml:space="preserve">
-    <value>Atsisiunčiant ar diegiant atnaujinimą įvyko klaida.
-Paspauskite „Taip“, jei norite bandyti dar kartą, arba „Ne“, jei norite atsisiųsti rankiniu būdu.</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
+    <value>187, 14</value>
   </data>
-  <data name="firstTimeRun" xml:space="preserve">
-    <value>Paleidimas pirma kartą</value>
+  <data name="labelQuestion.Text" xml:space="preserve">
+    <value>Wil je deze update downloaden?</value>
   </data>
-  <data name="firstTimeRunText" xml:space="preserve">
-    <value>Ar norėtumėte atidaryti instrukcijas?
-Galite jį atidaryti bet kuriuo metu, eidami į Pagalba -&gt; Atidaryti instrukcijas arba paspausdami F1.</value>
+  <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
+    <value>213, 18</value>
   </data>
-  <data name="information" xml:space="preserve">
-    <value>Informacija</value>
+  <data name="checkBoxNeverNotify.Text" xml:space="preserve">
+    <value>Niet meer controleren op updates</value>
   </data>
-  <data name="statusConnected" xml:space="preserve">
-    <value>Prisijungta</value>
+  <data name="labelVersionsText.Text" xml:space="preserve">
+    <value>Huidige versie:
+Laatste versie:</value>
   </data>
-  <data name="statusConnecting" xml:space="preserve">
-    <value>Jungiamasi...</value>
+  <data name="buttonSkipUpdate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>125, 23</value>
   </data>
-  <data name="statusConnectionFailed" xml:space="preserve">
-    <value>Prisijungimas ne sėkmingas (ar Discord veikia?)</value>
+  <data name="buttonSkipUpdate.Text" xml:space="preserve">
+    <value>Sla deze versie over</value>
   </data>
-  <data name="statusDisconnected" xml:space="preserve">
-    <value>Atsijungta</value>
-  </data>
-  <data name="statusError" xml:space="preserve">
-    <value>Prisijungimo Klaida (Blogas ID?)</value>
-  </data>
-  <data name="errorInvalidURL" xml:space="preserve">
-    <value>Neteisingas URL nurodytas mygtukams arba tekstas per ilgas!</value>
-  </data>
-  <data name="errorNoInternet" xml:space="preserve">
-    <value>Neįmanoma prisijungti prie interneto!</value>
-  </data>
-  <data name="noUpdatesFound" xml:space="preserve">
-    <value>Naujinimų nerasta!</value>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Update beschikbaar</value>
   </data>
 </root>
